fix: Handle JVM parameters with spaces in sbtopts and jvmopts (#7333)